#US-20-T-2 Create admin view of unapproved comments
-e2e testiranje

--- a/serbioneer-front/src/app/components/approve-comment/approve-comment.component.html
+++ b/serbioneer-front/src/app/components/approve-comment/approve-comment.component.html
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div class="col comment-button">
-      <button mat-icon-button (click)="approveComment($event)">
+      <button mat-icon-button (click)="approveComment($event)" id="approve-comment-{{comment.id}}">
         <mat-icon class="green-icon">done</mat-icon>
       </button>
     </div>
