--- a/serbioneer-front/src/app/components/header/header.component.html
+++ b/serbioneer-front/src/app/components/header/header.component.html
@@ -21,7 +21,7 @@
         <button mat-raised-button type="button" (click)="onClick('homepage')">Cultural sites</button> 
         <button mat-raised-button  type="button" (click)="onClick('add-site')">Add site</button>
         <button mat-raised-button  type="button" (click)="onClick('categories')">Categories</button>
-        <button mat-raised-button  type="button" (click)="onClick('pending-comments')">Pending comments</button>
+        <button mat-raised-button  type="button" (click)="onClick('pending-comments')" id="pending-comments">Pending comments</button>
         <button mat-raised-button  type="button" (click)="onClick('view-admin')">View admins</button>
     </div>
     
