--- a/serbioneer-front/src/app/components/pending-comments/pending-comments.component.html
+++ b/serbioneer-front/src/app/components/pending-comments/pending-comments.component.html
@@ -1,5 +1,5 @@
-<div>
-  <div class=”container”>
+<div id="pending-comments-page">
+  <div class="container">
     <div class="row">
       <div class="page-title">Reviews</div>
       <mat-icon class="page-title" color="black">comment</mat-icon>
@@ -8,7 +8,7 @@
       <app-approve-comment [comment]="comment"></app-approve-comment>
     </mat-list-item>
     <!--pomeriti paginator gore mozda?-->
-    <mat-paginator 
+    <mat-paginator id="pending-comments-paginator"
         [length]="commentsData.totalElements" 
         [pageSize]="commentsData.size" 
         [pageSizeOptions]="[1,5,10]"
