--- a/serbioneer-front/src/app/components/approve-comment/approve-comment.component.html
+++ b/serbioneer-front/src/app/components/approve-comment/approve-comment.component.html
@@ -21,7 +21,7 @@
       </button>
     </div>
     <div class="col comment-button">
-      <button mat-icon-button color="warn" (click)="declineComment($event)">
+      <button mat-icon-button color="warn" (click)="declineComment($event)" id = "reject-comment-{{comment.id}}">
         <mat-icon>clear</mat-icon>
       </button>
     </div>
