--- a/serbioneer-front/src/app/components/newsfeed/news/news.component.html
+++ b/serbioneer-front/src/app/components/newsfeed/news/news.component.html
@@ -1,7 +1,7 @@
 <div class="news">
     <mat-card class="news-card">
         <mat-card-header>
-          <div mat-card-avatar><i class="material-icons avatar">room</i></div>
+          <div mat-card-avatar><i class="material-icons avatar">menu_book</i></div>
           <mat-card-title>{{ news.culturalSiteName }}</mat-card-title>
           <mat-card-subtitle>{{ news.dateTime | date:'medium'}}</mat-card-subtitle>
         </mat-card-header>
