--- a/serbioneer-front/src/styles.sass
+++ b/serbioneer-front/src/styles.sass
@@ -37,5 +37,9 @@ form
     font-size: 18px
     font-weight: 550
 
+.toast-custom
+    top: 50px
+    right: 5px
+
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap'
