--- a/serbioneer-front/src/app/components/header/header.component.sass
+++ b/serbioneer-front/src/app/components/header/header.component.sass
@@ -16,8 +16,35 @@ button.home
 .mat-icon
   height: 40px
   width: 40px
-  line-height: 40px 
+  line-height: 40px
+  &[svgIcon="user"]
+    height: 35px
+    width: 35px
+    line-height: 35px
 
 .button-container
   display: flex
   justify-content: center
+
+// bootstrap
+#navigation
+  background-color: $primary-background
+  margin-bottom: 33px
+
+.home
+  font-weight: 600
+  line-height: 40px
+
+.nav-btn
+  cursor: pointer
+
+a
+  font-size: larger
+  &.dropdown-item
+    font-size: medium
+
+.dropdown:hover .dropdown-menu
+  display: block
+
+.dropdown-menu
+  left: -120px
