--- a/serbioneer-front/src/app/components/newsfeed/news/news.component.html
+++ b/serbioneer-front/src/app/components/newsfeed/news/news.component.html
@@ -7,7 +7,7 @@
         </mat-card-header>
         <mat-card-content class="news-content">
           {{ news.information }}
-          <div class="news-image-content">
+          <div class="news-image-content" *ngIf="news.images.length > 0">
             <ng-image-slider
               [images]="imageSlider"
               [infinite]="false"
