--- a/serbioneer-front/src/app/components/header/header.component.sass
+++ b/serbioneer-front/src/app/components/header/header.component.sass
@@ -2,7 +2,7 @@
 
 mat-toolbar
   background: $primary-background
-  margin-bottom: 33px
+  margin-bottom: 23px
 
 span.logo
   color: $primary-background
@@ -42,6 +42,9 @@ a
   font-size: larger
   &.dropdown-item
     font-size: medium
+  &.active
+    background-color: #c7e8f7 !important
+    color: black !important
 
 .dropdown:hover .dropdown-menu
   display: block
