#US-20 Pending comments
Pretty images.

--- a/serbioneer-front/src/app/components/approve-comment/approve-comment.component.sass
+++ b/serbioneer-front/src/app/components/approve-comment/approve-comment.component.sass
@@ -6,6 +6,9 @@
   margin-top: 20px
   margin-bottom: 10px
 
+.comment-image-content
+  padding: 25px 60px
+
 .author
   font-size: 19px
 
@@ -13,7 +16,6 @@
   margin-left: 10px
 
 .vertical-viewport
-  max-height: 150px
   width: 100%
 
 .cdk-virtual-scroll-viewport
