--- a/serbioneer-front/src/app/components/pending-comments/pending-comments.component.sass
+++ b/serbioneer-front/src/app/components/pending-comments/pending-comments.component.sass
@@ -10,6 +10,15 @@
   margin-left: 50px
   margin-top: 50px
 
+.page-description
+  font-size: 24px
+  margin-left: 50px
+  margin-top: 50px
+
+.page-secret
+  font-size: 8px
+  margin-left: 60px
+
 .author
   font-size: 19px
 
