--- a/serbioneer-front/src/app/components/approve-comment/approve-comment.component.html
+++ b/serbioneer-front/src/app/components/approve-comment/approve-comment.component.html
@@ -5,12 +5,12 @@
           <div class="author">{{comment.name}} {{ comment.surname}}:</div>
           <div>{{comment.culturalSiteName}}</div>
           <div>{{comment.text}}</div>
-          <div *ngIf="comment.images.length > 0">
-            <cdk-virtual-scroll-viewport itemSize="50" orientation="horizontal">
-              <div *cdkVirtualFor="let image of comment.images" >
-                <img src="data:image/png;base64,{{image.content}}" class="example-item" id="image._id"/>
-              </div>
-            </cdk-virtual-scroll-viewport>
+          <div class="comment-image-content" *ngIf="comment.images.length > 0">
+            <ng-image-slider
+              [images]="imageSlider"
+              [infinite]="false"
+              slideImage="1">
+            </ng-image-slider>
           </div>
         </div>
       </div>
