--- a/serbioneer-front/src/app/components/pending-comments/pending-comments.component.html
+++ b/serbioneer-front/src/app/components/pending-comments/pending-comments.component.html
@@ -4,15 +4,26 @@
       <div class="page-title">Reviews</div>
       <mat-icon class="page-title" color="black">comment</mat-icon>
     </div>
-    <mat-list-item *ngFor="let comment of commentsData.content">
-      <app-approve-comment [comment]="comment"></app-approve-comment>
-    </mat-list-item>
-    <!--pomeriti paginator gore mozda?-->
-    <mat-paginator id="pending-comments-paginator"
-        [length]="commentsData.totalElements" 
-        [pageSize]="commentsData.size" 
-        [pageSizeOptions]="[1,5,10]"
-        (page)="pageEvent = $event; onPaginateChange($event)">
-    </mat-paginator>
+    <div *ngIf="commentsData.content.length > 0; then showComments else noComments"></div>
+    <ng-template #showComments>
+      <mat-list-item *ngFor="let comment of commentsData.content">
+        <app-approve-comment [comment]="comment"></app-approve-comment>
+      </mat-list-item>
+      <!--pomeriti paginator gore mozda?-->
+      <mat-paginator id="pending-comments-paginator"
+          [length]="commentsData.totalElements" 
+          [pageSize]="commentsData.size" 
+          [pageSizeOptions]="[2,5,10]"
+          (page)="pageEvent = $event; onPaginateChange($event)">
+      </mat-paginator>
+    </ng-template>
+    <ng-template #noComments>
+      <div class="page-description">
+        No pending comments, you made it!
+      </div>
+      <div class="page-secret">
+        You should probably go home now...
+      </div>
+    </ng-template>
   </div>
 </div>
