--- a/serbioneer-front/src/app/components/comment/comment.component.sass
+++ b/serbioneer-front/src/app/components/comment/comment.component.sass
@@ -1,20 +1,18 @@
-@import "../../../styles.sass"
-
-.vertical-viewport
-  max-height: 150px
+.comment
+  margin-bottom: 17px
   width: 100%
-
-.cdk-virtual-scroll-viewport
-  overflow-y: hidden
-  overflow: scroll
-  -webkit-overflow-scrolling: touch
-  display: flex
-  flex-direction: row
-  writing-mode: vertical-lr
-  height: 70px
-  width: 90%
-
-.example-item 
-  height: 40px
-  width: 40px
-  margin: 5px
+.comment-about
+  font-size: 12px
+  padding-left: 35px
+.comment-author
+  padding-top: 10px
+  padding-left: 20px
+  font-size: 16px
+  font-weight: bolder
+.comment-text
+  margin-bottom: 10px
+  padding-left: 25px
+  font-size: 16px
+  font-style: italic
+.comment-images
+  margin-bottom: 15px
