--- a/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.sass
+++ b/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.sass
@@ -13,22 +13,34 @@
 .type-comment
     width: 100%
 
-.cdk-virtual-scroll-viewport
-  overflow-y: hidden
-  overflow: scroll
-  -webkit-overflow-scrolling: touch
-  display: flex
-  flex-direction: row
-  writing-mode: vertical-lr
-  height: 70px
-  width: 50%
+.divide
+    margin-top: 10px
+    margin-bottom: 20px
+.site-title
+    font-weight: bolder
+.site-subtitle
+    font-weight: bolder
+    margin-left: 15px
+    margin-top: 8px
+.site-description
+    font-size: 14px
+.site-news
+    margin-left: 40px
+.subtitle-align-news
+    padding-left: 250px
+.subtitle-align-comments
+    padding-left: 258px
+.subtitle-icon
+    line-height: 43px
+    font-size: 35px
+.rate-site
+    font-size: 16px
+// star rating size
+ngb-rating
+    font-size: 20px
 
-.example-item 
-  height: 40px
-  width: 40px
-  margin: 5px
+.site-image-content
+    padding: 25px 60px
 
-.image-preview
-    height:50
-    width:80px
-    margin: 3px
+app-comment
+    width: 100%
