--- a/serbioneer-front/src/app/components/homepage/homepage.component.html
+++ b/serbioneer-front/src/app/components/homepage/homepage.component.html
@@ -64,7 +64,8 @@
         </div>
         <div class="col-md-6">
             <app-map-view
-                [dataSource]="dataSource"
+                [divId]="mapHomepage"
+                [dataSource]="dataSource.content"
             ></app-map-view>
         </div>
     </div>
