--- a/serbioneer-front/src/app/components/news-article/news-article.component.sass
+++ b/serbioneer-front/src/app/components/news-article/news-article.component.sass
@@ -1,23 +1,9 @@
-@import "../../../styles.sass"
-
-.container
-    display: inline
-
-.vertical-viewport
-  height: 150px
-  width: 100%
-
-.cdk-virtual-scroll-viewport
-  overflow-y: hidden
-  overflow: scroll
-  -webkit-overflow-scrolling: touch
-  display: flex
-  flex-direction: row
-  writing-mode: vertical-lr
-  height: 70px
-  width: 90%
-
-.example-item 
-  height: 40px
-  width: 40px
-  margin: 5px
+.news
+  margin-bottom: 17px
+.news-title
+  font-size: 12px
+.news-info
+  padding: 10px 20px
+  font-size: 16px
+.news-images
+  margin-bottom: 15px
