#US-27 Update personal information angular unit testing
Angular unit testing for MyProfileComponent and ChangePasswordComponent finished

--- a/serbioneer-front/src/app/components/change-password/change-password.component.html
+++ b/serbioneer-front/src/app/components/change-password/change-password.component.html
@@ -2,7 +2,7 @@
     <div class="card-body">
         <form id = "change-password-form" [formGroup] = "changePasswordForm" (ngSubmit) = "onSubmit()">
             <div class="form-group">
-                <mat-form-field appearance="fill" class="form-field">
+                <mat-form-field id = "oldPassword-form-field" appearance="fill" class="form-field">
                     <mat-label>Enter your old password</mat-label>
                     <input id = "old-password" matInput [type]="hide ? 'password' : 'text'"  formControlName ="oldPassword">
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
@@ -13,7 +13,7 @@
             </div>
             <div formGroupName="passwordGroup">
                 <div class="form-group">
-                    <mat-form-field appearance="fill" class="form-field">
+                    <mat-form-field id = "newPassword-form-field" appearance="fill" class="form-field">
                         <mat-label>Enter your new password</mat-label>
                         <input id = "new-password" matInput [type]="hide ? 'password' : 'text'"  formControlName ="password">
                         <button id = "show-pass" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
@@ -23,7 +23,7 @@
                     </mat-form-field>
                 </div>
                 <div class="form-group">
-                    <mat-form-field appearance="fill" class="form-field">
+                    <mat-form-field id = "repeatPassword-form-field" appearance="fill" class="form-field">
                         <mat-label>Repeat entered password</mat-label>
                         <input id = "repeat-password" matInput [type]="hide ? 'password' : 'text'"  formControlName ="confirmPassword"
                             [errorStateMatcher]="confirmPasswordMatcher">
