--- a/serbioneer-front/src/app/components/my-profile/my-profile.component.html
+++ b/serbioneer-front/src/app/components/my-profile/my-profile.component.html
@@ -22,7 +22,7 @@
                 </mat-form-field>
             </div>
             <div *ngIf = "role ==='ROLE_ADMIN'"class="form-group">
-                <mat-form-field appearance="fill">
+                <mat-form-field id = "date-form-field" appearance="fill">
                     <mat-label>Choose a date</mat-label>
                     <input id ="date-input" matInput formControlName="dateOfBirth" [matDatepicker]="dateOfBirth">
                     <mat-datepicker-toggle matSuffix [for]="dateOfBirth"></mat-datepicker-toggle>
