--- a/serbioneer-front/src/app/components/admin/view-admin/view-admin.component.html
+++ b/serbioneer-front/src/app/components/admin/view-admin/view-admin.component.html
@@ -1,6 +1,6 @@
-<div class='ng-container'>
+<div class='ng-container' id="view-admin-page">
     <div>
-        <table mat-table [dataSource]="dataSource.content">
+        <table mat-table [dataSource]="dataSource.content" id="admin-table">
             
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
