--- a/serbioneer-front/src/app/components/login-register/login/login.component.html
+++ b/serbioneer-front/src/app/components/login-register/login/login.component.html
@@ -2,14 +2,14 @@
     <div class="card-body">
         <form id = "login-form" [formGroup] = "loginForm" (ngSubmit) = "onSubmit()">
             <div class="form-group">
-                <mat-form-field appearance="fill" class="form-field">
+                <mat-form-field id="email-form-field" appearance="fill" class="form-field">
                     <mat-label>Enter your email</mat-label>
                     <input id = "email-input" matInput placeholder="something@example.com" formControlName ="email">
                     <mat-error id = "email-error" *ngIf="loginForm.get('email')?.invalid">{{getEmailErrorMessage()}}</mat-error>
                 </mat-form-field>
             </div>
             <div class="form-group">
-                <mat-form-field appearance="fill" class="form-field">
+                <mat-form-field id="password-form-field" appearance="fill" class="form-field">
                     <mat-label>Enter your password</mat-label>
                     <input id = "password-input" matInput [type]="hide ? 'password' : 'text'"  formControlName ="password">
                     <button id = "show-pass" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
