--- a/serbioneer-front/src/app/components/login-register/register/register.component.html
+++ b/serbioneer-front/src/app/components/login-register/register/register.component.html
@@ -2,7 +2,7 @@
     <div class="card-body">
         <form id= "register-form" [formGroup] = "registerForm" (ngSubmit) = "onSubmit()">
             <div class="form-group">
-                <mat-form-field appearance="fill" class="form-field">
+                <mat-form-field id="email-form-field" appearance="fill" class="form-field">
                     <mat-label>Enter your email</mat-label>
                     <input id="email-input" matInput placeholder="something@example.com" formControlName ="email">
                     <mat-error id = "email-error" *ngIf="registerForm.get('email')?.invalid">{{getEmailErrorMessage()}}</mat-error>
@@ -10,7 +10,7 @@
             </div>
             <div formGroupName="passwordGroup">
                 <div class="form-group">
-                    <mat-form-field appearance="fill" class="form-field">
+                    <mat-form-field id="password-form-field" appearance="fill" class="form-field">
                         <mat-label>Enter your password</mat-label>
                         <input id = "password-input" matInput [type]="hide ? 'password' : 'text'"  formControlName ="password">
                         <button id = "show-pass" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
@@ -20,7 +20,7 @@
                     </mat-form-field>
                 </div>
                 <div class="form-group">
-                    <mat-form-field appearance="fill" class="form-field">
+                    <mat-form-field id="repeat-password-form-field" appearance="fill" class="form-field">
                         <mat-label>Repeat entered password</mat-label>
                         <input id = "repeat-password-input" matInput [type]="hide ? 'password' : 'text'"  formControlName ="confirmPassword"
                             [errorStateMatcher]="confirmPasswordMatcher">
@@ -33,14 +33,14 @@
                 </div>
             </div>
             <div class="form-group">
-                <mat-form-field appearance="fill" class="form-field">
+                <mat-form-field id="name-form-field" appearance="fill" class="form-field">
                     <mat-label>Name</mat-label>
                     <input id = "name-input" matInput formControlName ="name">
                     <mat-error id = "name-error" *ngIf="registerForm.get('name')?.invalid">{{getNameErrorMessage('name')}}</mat-error>
                 </mat-form-field>
             </div>
             <div class="form-group">
-                <mat-form-field appearance="fill" class="form-field">
+                <mat-form-field id="surname-form-field" appearance="fill" class="form-field">
                     <mat-label>Surname</mat-label>
                     <input id = "surname-input" matInput formControlName ="surname">
                     <mat-error id = "surname-error" *ngIf="registerForm.get('surname')?.invalid">{{getNameErrorMessage('surname')}}</mat-error>
