#US-20 As an admin, I want to be able to approve pending comments, so that I can manage inappropriate comments
- angular testovi za approve comment component

--- a/serbioneer-front/src/app/components/pending-comments/pending-comments.component.html
+++ b/serbioneer-front/src/app/components/pending-comments/pending-comments.component.html
@@ -7,7 +7,7 @@
     <div *ngIf="commentsData.content.length > 0; then showComments else noComments"></div>
     <ng-template #showComments>
       <mat-list-item *ngFor="let comment of commentsData.content">
-        <app-approve-comment [comment]="comment"></app-approve-comment>
+        <app-approve-comment [comment]="comment" (commentSaidFetch)="fetchComments()"></app-approve-comment>
       </mat-list-item>
       <!--pomeriti paginator gore mozda?-->
       <mat-paginator id="pending-comments-paginator"
