#US-31-cultural-site
Modified view of buttons, forms and dialogs.
Added confirmation dialog.

--- a/serbioneer-front/src/app/components/comment/comment.component.html
+++ b/serbioneer-front/src/app/components/comment/comment.component.html
@@ -16,7 +16,7 @@
     <form (ngSubmit)="saveComment($event)">
       <input type="text" [value]="inputText" name="inputText">
       <button mat-icon-button type="submit">
-        <mat-icon>rate_review</mat-icon>
+        <mat-icon>save</mat-icon>
       </button>
     </form>
   </div>
