--- a/serbioneer-front/src/app/components/header/header.component.html
+++ b/serbioneer-front/src/app/components/header/header.component.html
@@ -79,7 +79,7 @@
     <!-- login btn -->
     <div class="navbar-nav mr-auto" *ngIf="role===''">
     </div>
-    <a id="login-btn" *ngIf="role===''" class="nav-link nav-btn home btn" tabindex="0" role="button" 
+    <a id="login-header-btn" *ngIf="role===''" class="nav-link nav-btn home btn" tabindex="0" role="button" 
         (click)="onClick('login-register/login')" (keyup.enter)="onClick('login-register/login')">
         <span class="flag red">Lo</span>
         <span class="flag blue">gi</span>
