--- a/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.sass
+++ b/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.sass
@@ -13,13 +13,17 @@
 .type-comment
     width: 100%
 
+.image-preview
+    margin: 5px
+    height: 25%
+    width: 25%
+
 .divide
     margin-top: 10px
     margin-bottom: 20px
 .site-title
     font-weight: bolder
 .site-subtitle
-    font-weight: bolder
     margin-left: 15px
     margin-top: 8px
 .site-description
@@ -35,6 +39,11 @@
     font-size: 35px
 .rate-site
     font-size: 16px
+.file-title
+    font-size: 20px
+.file-form
+    justify-content: center
+    margin: 15px !important
 // star rating size
 ngb-rating
     font-size: 20px
