--- a/serbioneer-front/src/styles.sass
+++ b/serbioneer-front/src/styles.sass
@@ -5,6 +5,7 @@ $light-primary: rgb(170, 224, 249, 0.2)
 $secondary-background: #b8d7d2
 $lighter-secondary: rgb(184, 215, 210, 0.4)
 $light-secondary: rgb(184, 215, 210, 0.06)
+$btn-color: #3f51b5
 
 body
     background-color: $light-secondary !important
@@ -20,6 +21,10 @@ body
 
 .btn-theme
     background-color: $primary-background !important
+
+.btn-purple
+    background-color: $btn-color !important
+    color: white !important
 
 button
     border-width: 0px !important
