--- a/serbioneer-front/src/app/components/add-news-article/add-news-article.component.html
+++ b/serbioneer-front/src/app/components/add-news-article/add-news-article.component.html
@@ -2,14 +2,14 @@
 
 <mat-dialog-content>
     <form [formGroup]="newsForm" (ngSubmit)="onSubmit($event)">
-        <div class="form-group">
-            <input type="text" placeholder="Input text..." class="type-comment"
-            formControlName="text"/>
-        </div>
-        <div class="form-group">
-            <label for="file">File</label>
+        <mat-form-field id="text-input" appearance="fill" class="form-field">
+            <mat-label>News content</mat-label>
+            <input type="text" id="text-input" matInput formControlName="text" placeholder="Input content...">
+            <mat-error id = "name-error" *ngIf="newsForm.get('text')?.invalid">{{getTextErrorMessage()}}</mat-error>
+        </mat-form-field>
+        <div class="form-group file-form">
+            <label for="file" class="file-title">File</label>
             <input 
-                formControlName="file"
                 id="file" 
                 type="file" 
                 class="form-control"
@@ -17,7 +17,7 @@
                 (change)="onFileChange($event)">
         </div>
         <img *ngFor='let url of images'  [src]="url" class="image-preview"> <br/>
-        <button class="btn btn-primary" type="submit">Submit</button>
-        <button class="btn btn-primary" (click)="close()" type="button">Cancel</button>
+        <button mat-raised-button class="btn btn-purple" type="submit">Create</button>
+        <button mat-raised-button class="btn btn-purple separate" (click)="close()" type="button">Cancel</button>
     </form>
 </mat-dialog-content>
