--- a/serbioneer-front/src/app/components/add-news-article/add-news-article.component.sass
+++ b/serbioneer-front/src/app/components/add-news-article/add-news-article.component.sass
@@ -1,6 +1,14 @@
-@import "../../../styles.sass"
-
 .image-preview
-    height:50
+    height:50px
     width:80px
     margin: 3px
+#text-input
+    min-width: 100%
+.file-title
+    font-size: 20px
+    margin-top: 5px
+.file-form
+    justify-content: center
+    text-align: left
+.separate
+    margin-left: 15px
