--- a/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.html
+++ b/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.html
@@ -9,18 +9,18 @@
                 </div>
             </div>
             <div class="col-2" *ngIf="adminIsLogged">
-                <button type="submit" mat-raised-button color="primary" (click)="addImages()">
+                <button mat-raised-button class="btn btn-purple" (click)="addImages()">
                     Add images
                 </button>
             </div>
             <div class="col-2" *ngIf="userIsLogged">
-                <button type="submit" mat-raised-button color="primary" (click)="onChangeSubscription($event)">
+                <button mat-raised-button class="btn btn-purple" (click)="onChangeSubscription($event)">
                     {{buttonValue}}
                 </button>
             </div>
             <div class="col-2" *ngIf="adminIsLogged">
-                <button mat-raised-button color="primary" (click)="openDialog()">
-                    {{buttonValue}}
+                <button mat-raised-button class="btn btn-purple" (click)="openDialog()">
+                    Add news
                 </button>
             </div>
         </div>
@@ -44,8 +44,9 @@
             </ng-image-slider>
         </div>
         <mat-divider class="divide"></mat-divider>
-        <!-- News -->
+        <!-- News & Comments -->
         <mat-accordion>
+            <!-- News -->
             <mat-expansion-panel hideToggle>
                 <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -75,6 +76,7 @@
                     <h6 *ngIf="adminIsLogged">Or try adding some yourself.</h6>
                 </ng-template>
             </mat-expansion-panel>
+            <!-- Comments -->
             <mat-expansion-panel hideToggle>
                 <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -105,37 +107,6 @@
                 </ng-template>
             </mat-expansion-panel>
         </mat-accordion>
-        <!-- <div *ngIf="news!.content!.length > 0">
-            <h4 class="site-subtitle">News about {{culturalSite.name}}:</h4>
-            <div class="site-news" *ngFor="let oneNews of news.content">
-                <app-news-article [news]="oneNews"></app-news-article>
-            </div>
-            <mat-paginator 
-                [length]="news.totalElements" 
-                [pageSize]="news.size" 
-                [pageSizeOptions]="[1,2,5,10]"
-                (page)="pageEventNews = $event; onPaginateChangeNews($event)">
-            </mat-paginator>
-            <mat-divider></mat-divider>
-        </div>
-        <div class="row">
-            <div>Reviews</div>
-            <button *ngIf="userIsLogged" type="submit" mat-raised-button (click)="addComments()">
-                <mat-icon>comment</mat-icon>
-            </button>
-        </div>
-        <div *ngIf="comments!.content!.length > 0">
-            <div class="row" *ngFor="let comment of comments.content">
-                <app-comment [comment]="comment" [culturalSiteId]="culturalSite.id"></app-comment>
-            </div>
-            <mat-paginator 
-                [length]="comments.totalElements" 
-                [pageSize]="comments.size" 
-                [pageSizeOptions]="[1,2,5,10]"
-                (page)="pageEventComments = $event; onPaginateChangeComments($event)">
-            </mat-paginator>
-            <mat-divider></mat-divider>
-        </div> -->
         <!-- Add review -->
         <div class="row" *ngIf="addNewComment">
             <form [formGroup]="myForm" (ngSubmit)="submit($event)">
@@ -143,7 +114,6 @@
                     <input type="text" placeholder="Share your experience of {{culturalSite.name}}" class="type-comment"
                         name="newCommentText" formControlName="text"/>
                 </div>
-               
                 <div class="form-group">
                     <label for="file">File</label>
                     <input 
@@ -158,11 +128,18 @@
                 <button class="btn btn-primary" type="submit">Submit</button>
             </form>
         </div>
-        <!-- Add images -->
-        <div class="row" *ngIf="addNewImages">
+    </div>
+    <div class="col-4">
+        <!-- Map -->
+        <app-map-view
+            [divId]="mapCulturalSite"
+            [dataSource]="[culturalSite]"
+        ></app-map-view>
+        <!-- Add image -->
+        <div class="row file-form" *ngIf="addNewImages">
             <form [formGroup]="myForm" (ngSubmit)="submitImages($event)">
                 <div class="form-group">
-                    <label for="file">File</label>
+                    <label for="file" class="file-title">File</label>
                     <input 
                         formControlName="file"
                         id="file" 
@@ -171,15 +148,9 @@
                         multiple="" 
                         (change)="onNewImageChange($event)">
                 </div>
-                <img *ngFor='let url of newImages'  [src]="url" class="image-preview"> <br/>
-                <button class="btn btn-primary" type="submit">Submit</button>
+                <img *ngFor='let url of newImages'  [src]="url" class="image-preview">
+                <button mat-raised-button class="btn btn-purple" type="submit">Submit</button>
             </form>
         </div>
-    </div>
-    <div class="col-4">
-        <app-map-view
-            [divId]="mapCulturalSite"
-            [dataSource]="[culturalSite]"
-        ></app-map-view>
     </div>
 </div>
