--- a/serbioneer-front/src/app/components/admin/view-admin/view-admin.component.sass
+++ b/serbioneer-front/src/app/components/admin/view-admin/view-admin.component.sass
@@ -1,5 +1,3 @@
-@import "../../../../styles.sass"
-
 table
   width: 100%
 
@@ -10,5 +8,10 @@ table
 td, th 
   width: 25%
 
-.chip-list
-  width: 100%
+.lonely
+  display: inline-block
+  font-size: 20px
+  margin-right: 20px
+
+.divide
+  margin-bottom: 20px !important
