--- a/serbioneer-front/src/app/components/admin/new-admin/new-admin.component.html
+++ b/serbioneer-front/src/app/components/admin/new-admin/new-admin.component.html
@@ -49,7 +49,7 @@
             <div class="form-group">
                 <mat-form-field appearance="fill">
                     <mat-label>Choose a date</mat-label>
-                    <input id="date-of-birth-input" matInput formControlName="dateOfBirth" [matDatepicker]="dateOfBirth">
+                    <input id="date-of-birth-input" matInput [max]="today" formControlName="dateOfBirth" [matDatepicker]="dateOfBirth">
                     <mat-error id="date-of-birth-error" *ngIf="newAdminForm.get('dateOfBirth')?.invalid">{{getRequiredFieldErrorMessage('dateOfBirth')}}</mat-error>
                     <mat-datepicker-toggle matSuffix [for]="dateOfBirth"></mat-datepicker-toggle>
                     <mat-datepicker #dateOfBirth></mat-datepicker>
